# wow_guilds_claude

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  addCharacters.txt  app.json  members.json  members.json.backup  members_20250810_234241.json  performance_test.md  uaguildlist.txt  wow_guild_bot.db
logs/: boss_kill_20250812_020719_149.json  boss_kill_20250812_020721_587.json  boss_kill_20250812_020722_222.json  boss_kill_20250812_020722_320.json  boss_kill_20250812_020723_962.json  boss_kill_20250812_020724_268.json  boss_kill_20250812_020724_695.json  boss_kill_20250812_020724_871.json  boss_kill_20250812_020728_469.json  boss_kill_20250812_020730_515.json  boss_kill_20250812_020732_052.json  boss_kill_20250812_020732_563.json  boss_kill_20250812_020734_102.json  boss_kill_20250812_021228_200.json  boss_kill_20250812_021228_793.json  boss_kill_20250812_021228_964.json  boss_kill_20250812_021229_949.json  boss_kill_20250812_021230_550.json  boss_kill_20250812_021231_095.json  boss_kill_20250812_021232_086.json  boss_kill_20250812_021234_647.json  boss_kill_20250812_021237_280.json  boss_kill_20250812_021237_923.json  boss_kill_20250812_021240_380.json  boss_kill_20250812_021929_983.json  boss_kill_20250812_021930_658.json  boss_kill_20250812_021931_104.json  boss_kill_20250812_021931_608.json  boss_kill_20250812_021931_937.json  boss_kill_20250812_021932_862.json  boss_kill_20250812_021933_267.json  boss_kill_20250812_021933_472.json  boss_kill_20250812_021935_826.json  boss_kill_20250812_021936_897.json  boss_kill_20250812_021937_583.json  boss_kill_20250812_021938_400.json  boss_kill_20250812_021938_886.json  boss_kill_422_20250812_020718_803.json  (+285 more)
(+13 files in other folders)
