[package]
name = "wow_guild_bot"
version = "0.1.0"
edition = "2021"
authors = ["Generated with Claude Code"]
description = "World of Warcraft Guild Discord Bot for raid progression and mythic+ rankings"
license = "MIT"

[dependencies]
# Discord integration
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

# Async runtime and utilities
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Configuration management
config = "0.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }
